# src/contacts/dto/contact-search.dto.ts
@@ -1,0 +1,48 @@
+import { IsOptional, IsString, IsInt, Min, IsIn } from 'class-validator';
+import { ApiPropertyOptional } from '@nestjs/swagger';
+
+export class ContactSearchDto {
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    firstName?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    lastName?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    email?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    phone?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsInt()
+    @Min(1)
+    page: number = 1;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsInt()
+    @Min(1)
+    limit: number = 10;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    @IsIn(['firstName', 'lastName', 'email', 'phone', 'id'])
+    sortBy?: string = 'id';
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    @IsIn(['asc', 'desc'])
+    sortOrder?: 'asc' | 'desc' = 'asc';
+}
